fix(das): by default hide the scrollbar on message containers.

--- a/projects/deliberation_at_scale/packages/frontend/app/globals.css
+++ b/projects/deliberation_at_scale/packages/frontend/app/globals.css
@@ -15,3 +15,7 @@ html, body {
 * {
     outline-color: #ddd;
 }
+
+#messages-scroll-container::-webkit-scrollbar {
+    display: none;
+}
